# Nova-Archiver-sinter-fork

./: README.md  build.py  check_icon.py  install.bat  nova.bat  nova_archiver.py  pyproject.toml  requirements.txt  run.py  setup_associations.py
