# [file name]: pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-archiver"
version = "1.0.0"
description = "Современный архиватор с красивым интерфейсом"
readme = "README_NOVA.md"
authors = [
    {name = "Nova Archiver Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Archiving",
]
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
nova-archiver = "nova_archiver:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/nova-archiver"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]